k8s/nginx-ingress-controller/app-example/deploy/30-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: secrets-example
  namespace: example-app
spec:
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example-app
          image: localhost:5000/secrets-example:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
      restartPolicy: Always
  selector:
    matchLabels:
      app: example
  replicas: 2 # tells deployment to run 2 pods matching the template
