k8s/nginx-ingress-controller/app-example/deploy/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-app
spec:
  selector:
    app: example-service
  type: ClusterIP
  ports:
  - name: example-service
    port: 5679
    targetPort: 5000
    protocol: TCP
