k8s/nginx-ingress-controller/app-example/deploy/50-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-service
spec:
  rules:
  - host: exampleapp.test
    http:
      paths:
      - path: /
        backend:
          serviceName: example-service
          servicePort: 5679
